Design modern portfolio page

--- a/index.html
+++ b/index.html
@@ -1,22 +1,56 @@
-
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Mohammed Awais - Business Analyst</title>
-    <style>
-        body { font-family: Arial; background-color: #f5f7fa; color: #333; margin: 40px; }
-        h1 { color: #2a3f5f; }
-        a.button {
-            display: inline-block; padding: 10px 20px; background: #2a3f5f; color: white; text-decoration: none;
-            border-radius: 5px; margin-top: 10px;
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Mohammed Awais | Business Analyst & Marketing Specialist</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <h1>Mohammed Awais</h1>
-    <p>I’m a data-driven Business Analyst based in Mississauga with a background in operations, credentialing, and process improvement.</p>
-    <a href="projects.html" class="button">View Projects</a>
-    <a href="resume.html" class="button">Download Resume</a>
-    <a href="contact.html" class="button">Contact Me</a>
+  <header class="hero">
+    <div class="content">
+      <h1>Mohammed Awais</h1>
+      <p class="tagline">Business Analyst &amp; Marketing Specialist</p>
+    </div>
+  </header>
+
+  <main>
+    <section id="about" class="container">
+      <h2>About Me</h2>
+      <p>I'm a data-driven Business Analyst and Marketing Specialist based in Mississauga with experience in operations, credentialing, and process improvement. I use analytics and creativity to solve business problems and deliver impactful strategies.</p>
+    </section>
+
+    <section id="projects" class="container">
+      <h2>Projects</h2>
+      <div class="project-grid">
+        <a class="project-card" href="https://client07qu.wixsite.com/dairyqueen07" target="_blank" rel="noopener">
+          <img src="https://source.unsplash.com/featured/?icecream" alt="Dairy Queen Website Redesign" />
+          <div class="card-content">
+            <h3>Dairy Queen Website Redesign</h3>
+            <p>Modernized the Dairy Queen site with a fresh layout and improved user experience focused on intuitive navigation.</p>
+          </div>
+        </a>
+        <a class="project-card" href="https://docs.google.com/file/d/1VkI8ki1Xf9KTmgdWi3s2oVYyNIkcnlpw/edit" target="_blank" rel="noopener">
+          <img src="https://source.unsplash.com/featured/?business" alt="Sales Leadership Interview and Strategy" />
+          <div class="card-content">
+            <h3>Sales Leadership Interview &amp; Strategy</h3>
+            <p>Conducted interviews with sales leaders and developed an action-oriented strategy to drive cross-team collaboration.</p>
+          </div>
+        </a>
+      </div>
+    </section>
+
+    <section id="contact" class="container">
+      <h2>Contact</h2>
+      <ul class="contact-list">
+        <li>Email: <a href="mailto:awais123u@gmail.com">awais123u@gmail.com</a></li>
+        <li>LinkedIn: <a href="https://linkedin.com/in/mohammed-awais-25890210b" target="_blank" rel="noopener">linkedin.com/in/mohammed-awais-25890210b</a></li>
+        <li>Phone: <a href="tel:5555555555">555-555-5555</a></li>
+      </ul>
+    </section>
+  </main>
 </body>
 </html>
